# threemf

./: Cargo.toml
src/: Frontplate.3mf  error.rs  lib.rs  mesh.rs  model.rs  test.3mf  test_fusion.3mf  test_fusion_multi.3mf  triangle.rs  units.rs  vertex.rs  xml_parse.rs
