[package]
name = "threemf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.5", default-features = false, features = ["deflate"] }
thiserror = "1.0.30"
minidom = "0.13.0"
quick-xml = { version = "0.23.0-alpha3", features = ["serialize"] }
serde = { version = "1.0.130", features = ['derive'] }
